# presentation-utaustin-geoai

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  biome.json  mdx-components.tsx  next.config.mjs  package.json  pyproject.toml  tsconfig.json
.claude/skills/: tg-branding.md
.github/workflows/: deploy.yml
components/: CodeBlock.tsx  Columns.tsx  Deck.tsx  DeckLibrary.tsx  Embed.tsx  Img.tsx  MapLibreEmbed.tsx  PMTilesEmbed.tsx  QRGrid.tsx  SectionSlide.tsx  Slide.tsx  SlideNav.tsx  TerminalReplay.tsx  TitleSlide.tsx  Video.tsx  ZarrTemperatureMap.tsx
pages/: _app.tsx  index.mdx  index.tsx
pages/decks/: utaustin-geoai.mdx
public/casts/: claude-geospatial.cast
public/videos/: S01_CloudNativeStack.webm  S02_InferencePipeline.webm  S03_TorchGeoSampling.webm  S04_EmbeddingRetrieval.webm  S05_COGByteRange.webm  S06_STACSearchFanout.webm  S07_GeoParquetPushdown.webm  S08_ContrastiveLearning.webm  S09_MAEMaskedModeling.webm  S10_PixelVsPatchEmbedding.webm  S12_CloudNativeVsDownload.webm  S13_ProductionPipeline.webm  S14_CNGTimeline.webm  S16_Flywheel.webm
scripts/: fetch_era5.py
styles/: globals.css
theme/: index.ts
types/: asciinema-player.d.ts
video/: Makefile  Makefile.geoai  _theme.py  geoai_scenes.py  geoai_scenes_ext.py  plan.md  script.py
video/scenes/: __init__.py  s01_cloud_native_stack.py  s02_inference_pipeline.py  s03_torchgeo_sampling.py  s04_embedding_retrieval.py  s05_cog_byte_range.py  s06_stac_search_fanout.py  s07_geo_parquet_pushdown.py  s08_contrastive_learning.py  s09_mae_masked_modeling.py  s14_cng_timeline.py  (+4 more)
(+54 files in other folders)
